syntax = "proto3";

package manager;

option go_package = "./v1;v1";

import "validate/validate.proto";

message Department {
  uint32 id = 1;
  uint32 parent_id = 2;
  string name = 3;
  string keyword = 4;
  string description = 5;
  uint32 created_at = 6;
  uint32 updated_at = 7;
  repeated Department children = 8;
}

message GetDepartmentTreeReply{
  Department department = 1;
}

message GetDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}

message GetDepartmentReply{
  Department department = 1;
}

message AddDepartmentRequest{
  uint32 parent_id = 1[(validate.rules).uint32 = {gt:0}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string keyword = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
}

message UpdateDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  uint32 parent_id = 2[(validate.rules).uint32 = {gt:0}];
  string name = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
}

message DeleteDepartmentRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}